crates/sgf-core/tests/snapshots/export/new_scenario.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
# created by Stellaris Galaxy Forge 0.0.0
static_galaxy_scenario = {
	name = "sgf_test"
	priority = 5
	supports_shape = elliptical
	supports_shape = ring
	supports_shape = spiral_2
	supports_shape = spiral_3
	supports_shape = spiral_4
	supports_shape = spiral_6
	supports_shape = bar
	supports_shape = starburst
	supports_shape = cartwheel
	supports_shape = spoked
	default = no
	num_empires = { min = 0 max = 1 }
	num_empire_default = 1
	fallen_empire_default = 0
	fallen_empire_max = 0
	marauder_empire_default = 0
	marauder_empire_max = 0
	nomad_empire_default = 0
	nomad_empire_max = 0
	advanced_empire_default = 0
	colonizable_planet_odds = 1.0
	primitive_odds = 1.0
	num_wormhole_pairs = { min = 0 max = 0 }
	num_wormhole_pairs_default = 0
	num_gateways = { min = 0 max = 0 }
	num_gateways_default = 0
	num_hyperlanes_default = 0
	random_hyperlanes = no
	core_radius = 0
	crisis_strength = 0.75
	extra_crisis_strength = { 5 10 25 }

}
